pyalpm 0.5 :
  * now requires pacman 4.0
  * API: initialize() replaced by Handle() constructor
  * API: DB.url property replaced by DB.servers
  * API: Package.files now returns a list of (name, size, mode)
  * API: Handle has a new attribute gpgdir
  * fix: repository order suhffled in pacman.conf parsing
  * fix: incorrect default values for options

pyalpm 0.4.2 :
  * fix a typo in init_with_config()
  * add an example script to list optdepends (cf pacman FS#16108)

pyalpm 0.4.1 :
  * better parser for pacman.conf files
  * interface tweaks for pycman

pyalpm 0.4 :
  * wraps alpm_db_update(), alpm_db_search()
  * fix: extra free() after calling transaction.add_pkg()
  * pycman: correctly read configuration
  * pycman: nearly complete support for remove, sync, upgrade actions

pyalpm 0.3 :
  * wraps alpm_db_set_pkgreason()
  * wraps alpm_sync_newversion()
  * wraps transaction control functions
  * initial support for getting/setting Python functions as libalpm callbacks
  * pycman: support -D, -Q[demotu]

pyalpm 0.2 :
  * handles alpm error strings
  * wraps alpm_db_read_grp()
  * wraps alpm_pkg_get_reason()
  * wraps alpm_find_grp_pkgs()
  * wraps alpm_find_satisfier()
  * add pycman (Python clone of pacman), with read-only actions

pyalpm 0.1 :
  * databases and packages are wrapped by Python classes
  * support for registering databases
  * support for getting/setting libalpm options (except callbacks)