@@ -326,7 +326,7 @@ void pyalpm_logcb(alpm_loglevel_t level, const char *fmt, va_list va_args) {
   char *log;
   PyObject *result;
   vasprintf(&log, fmt, va_args);
-  result = PyObject_CallFunction(global_py_callbacks[CB_LOG], "s", log);
+  result = PyObject_CallFunction(global_py_callbacks[CB_LOG], "is", level, log);
   if (!result) PyErr_Print();
   Py_CLEAR(result);
 }
